--- a/src/app/shared/components/menu-layout/menu-layout.component.html
+++ b/src/app/shared/components/menu-layout/menu-layout.component.html
@@ -68,13 +68,13 @@
               <span >Contratos</span>
           </li>
         </div>
-        
+<!--         
         <div routerLink="energy-matrix" nz-menu-item nzMatchRouter>
           <li>
               <i nz-icon nzType="pie-chart"></i>
               <span >Matriz energetica</span>
           </li>
-        </div>
+        </div> -->
 
         <li nz-submenu nzOpen nzTitle="Facturacion" nzIcon="calculator">
           <ul>
