--- a/src/app/modules/menu-layout/components/issued-invoices/issued-invoices.component.html
+++ b/src/app/modules/menu-layout/components/issued-invoices/issued-invoices.component.html
@@ -45,13 +45,11 @@
             {{data.id}}
             </td>
             <td>{{data.codigo}}</td>
-            <td>{{ data.descripcion }}</td>
-            <td>{{data.id}}</td>
-            <td>{{data.codigo}}</td>
-            <td>{{data.codigo}}</td>
-            <td nzRight>
-                {{ data.descripcion }}
-            </td>
+            <td>{{ data.contrato }}</td>
+            <td>{{data.cliente}}</td>
+            <td>{{data.fechaInicio}}</td>
+            <td>{{ data.energiaConsumida }}</td>
+            <td nzRight>{{ data.total }}</td>
           </tr>
         </tbody>
       </nz-table>
