--- a/src/app/modules/menu-layout/components/rates/rates.component.html
+++ b/src/app/modules/menu-layout/components/rates/rates.component.html
@@ -2,7 +2,7 @@
 <div nz-row class="row-1">
 
     <div nz-col nzOffset="8" nzSpan="4" class="row1-col1">
-      <app-modal-new-rate></app-modal-new-rate>
+      <app-modal-new-rate (ListOfDataUpdated)="updateTable($event)"></app-modal-new-rate>
     </div>
 
     <div nz-col nzSpan="12" class="row1-col2">
@@ -42,14 +42,14 @@
         <tbody>
           <tr *ngFor="let data of filterTable.data">
             <td nzLeft>
-              <button class="edit" nz-button nzType="primary"  nzShape="circle"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
+              <app-modal-new-rate [dataPosition]="data"></app-modal-new-rate>
               <button class="delete" nz-button nzType="primary"  nzShape="circle"><i nz-icon nzType="delete" nzTheme="outline" (click)="DeleteRate(data.id)"></i></button>
             </td>
             <td>{{data.id}}</td>
             <td>{{data.codigo}}</td>
             <td>{{ data.descripcion }}</td>
             <td nzRight>
-              <app-modal-parameters [ListOfData]="listOfData" (ListOfDataUpdated)="updateTable($event)"></app-modal-parameters>
+              <app-modal-parameters [ListOfData]="listOfData"></app-modal-parameters>
             </td>
           </tr>
         </tbody>
