--- a/src/app/modules/menu-layout/components/rates/rates.component.html
+++ b/src/app/modules/menu-layout/components/rates/rates.component.html
@@ -49,7 +49,7 @@
             <td>{{data.codigo}}</td>
             <td>{{ data.descripcion }}</td>
             <td nzRight>
-              <app-modal-parameters [ListOfData]="listOfData"></app-modal-parameters>
+              <app-modal-parameters [dataPosition]="data"></app-modal-parameters>
             </td>
           </tr>
         </tbody>
