--- a/src/app/modules/menu-layout/components/input-parameters/input-parameters.component.html
+++ b/src/app/modules/menu-layout/components/input-parameters/input-parameters.component.html
@@ -2,7 +2,7 @@
 <div nz-row class="row-1">
 
     <div nz-col nzOffset="8" nzSpan="4" class="row1-col1">
-      <app-modal-new-parameter></app-modal-new-parameter>
+      <app-modal-new-parameter  [ListOfCharges]="ListOfCharges" ></app-modal-new-parameter>
     </div>
 
     <div nz-col nzSpan="12" class="row1-col2">
@@ -23,7 +23,7 @@
       <nz-table #filterTable [nzData]="listOfData" nzTableLayout="fixed" [nzScroll]="{  x: '1150px', y: '385px' }"  [nzPageSize]="10">
         <thead>
           <tr>
-          <th nzLeft nzWidth="80px">ID</th>
+          <th nzLeft nzWidth="80px">Acciones</th>
             <th
               *ngFor="let column of listOfColumns"
               [nzSortOrder]="column.sortOrder"
@@ -36,22 +36,22 @@
             >
               {{ column.name }}
             </th>
-            <th nzRight nzWidth="80px">Acciones</th>
+            <th nzRight nzWidth="80px">Valor</th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let data of filterTable.data">
-              
-            <td nzLeft>{{data.id}}</td>
-            <td>{{data.codigo}}</td>
-            <td>{{data.cargo}}</td>
-            <td>{{data.valor}}</td>
-            <td>{{ data.fechaInicio }}</td>
-            <td>{{ data.fechaFinal }}</td>    
-            <td nzRight>
-                <button class="edit" nz-button nzType="primary"  nzShape="circle"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
+            <td nzLeft>
+                <app-modal-new-parameter [dataPosition]="data" [ListOfCharges]="ListOfCharges"></app-modal-new-parameter>
                 <button class="delete" nz-button nzType="primary"  nzShape="circle"><i nz-icon nzType="delete" nzTheme="outline" (click)="DeleteRate(data.id)"></i></button>
               </td>
+            <td>{{data.idParametro}}</td>
+            <td>{{data.codigo}}</td>
+            <td>{{data.cargoNombre}}</td>
+            <td>{{ data.fechaInicio }}</td>
+            <td>{{ data.fechaFinal }}</td>  
+            <td>{{ data.observacion }}</td>  
+            <td nzRight>{{data.valor}}</td>  
           </tr>
         </tbody>
       </nz-table>
