--- a/src/app/modules/menu-layout/components/input-parameters/modal-new-parameter/modal-new-parameter.component.html
+++ b/src/app/modules/menu-layout/components/input-parameters/modal-new-parameter/modal-new-parameter.component.html
@@ -1,9 +1,14 @@
 
-<button nz-button [nzType]="'primary'" (click)="showModal()"><span>Nuevo Registro</span></button>
-<nz-modal [(nzVisible)]="isVisible" nzTitle="Parametros de entrada" (nzOnCancel)="handleCancel()" (nzOnOk)="Post()">
+<div *ngIf="dataPosition; else Guardar">
+    <button class="edit" nz-button nzType="primary"  nzShape="circle" (click)="showModal()"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
+</div>
+<ng-template #Guardar>
+    <button nz-button [nzType]="'primary'" (click)="showModal()"><span>Nuevo Registro</span></button>
+</ng-template>
+<nz-modal [(nzVisible)]="isVisible" nzTitle="Parametros de entrada" (nzOnCancel)="handleCancel()" (nzOnOk)="PushData()">
     <ng-container *nzModalContent>
 
-    <form nz-form nzLayout="horizontal">
+    <form nz-form [formGroup]="validateForm" nzLayout="horizontal">
 
         <div nz-row>
             <div nz-col nzSpan="11">
@@ -11,7 +16,7 @@
                     <div nz-row>
                         <nz-form-item>
                         <nz-form-control>
-                            <nz-date-picker class="inputMedium"></nz-date-picker>
+                            <nz-date-picker formControlName="fechaInicio" class="inputMedium"></nz-date-picker>
                         </nz-form-control>
                         </nz-form-item>
                     </div>
@@ -21,7 +26,7 @@
                 <div nz-row>
                     <nz-form-item >
                     <nz-form-control>
-                        <nz-date-picker class="inputMedium"></nz-date-picker>
+                        <nz-date-picker formControlName="fechaFinal" class="inputMedium"></nz-date-picker>
                     </nz-form-control>
                     </nz-form-item>
                 </div>
@@ -34,9 +39,10 @@
                 <div nz-row>
                     <nz-form-item nzFlex>
                     <nz-form-control>
-                        <nz-select [ngModel]="'Norte'" class="inputMedium">
-                            <nz-option nzLabel="Norte" nzValue="Norte"></nz-option>
-                            <nz-option nzLabel="Sur" nzValue="Sur"></nz-option>
+                        <nz-select formControlName="cargo" class="inputMedium">
+                            <div *ngFor="let charge of ListOfCharges">
+                                <nz-option nzLabel={{charge.nombre}} nzValue={{charge.id}}></nz-option>
+                            </div>
                         </nz-select>                   
                     </nz-form-control>
                     </nz-form-item>
@@ -48,7 +54,7 @@
                 <div nz-row>
                     <nz-form-item>
                     <nz-form-control>
-                        <input nz-input class="inputMedium" id="Descripcion" type="text" placeholder="(0.5)%"  [disabled]="false" />
+                        <input nz-input formControlName="valor" class="inputMedium" id="Descripcion" type="number" placeholder="(0.5)%"  [disabled]="false" />
                     </nz-form-control>
                     </nz-form-item>
                 </div>
@@ -63,7 +69,7 @@
                 <div nz-row>
                     <nz-form-item>
                     <nz-form-control>
-                        <textarea class="inputLarge" nz-input rows="2" placeholder="Escriba algo"></textarea>
+                        <textarea formControlName="observacion" class="inputLarge" nz-input rows="2" placeholder="Escriba algo"></textarea>
                     </nz-form-control>
                     </nz-form-item>
                 </div>
