--- a/src/app/modules/menu-layout/components/contracts/contracts.component.html
+++ b/src/app/modules/menu-layout/components/contracts/contracts.component.html
@@ -2,7 +2,7 @@
 <div nz-row class="row-1">
 
     <div nz-col nzOffset="8" nzSpan="4" class="row1-col1">
-      <app-modal-new-contract [ListOfClients]="ListOfClients" [ListOfData]="ListOfData"></app-modal-new-contract>
+      <app-modal-new-contract [ListOfClients]="ListOfClients" (DataUpdated)="TablaUpdated($event)"></app-modal-new-contract>
     </div>
 
     <div nz-col nzSpan="12" class="row1-col2">
@@ -20,7 +20,7 @@
 </div>
 <div nz-row class="row-2">
   <div nz-col>
-      <nz-table #filterTable [nzData]="ListOfData" nzTableLayout="fixed" [nzScroll]="{  x: '1150px', y: '385px' }"  [nzPageSize]="10">
+      <nz-table [nzData]="ListOfData" nzTableLayout="fixed" [nzScroll]="{  x: '1150px', y: '385px' }"  [nzPageSize]="10">
         <thead>
           <tr>
           <th nzLeft nzWidth="80px" nzAlign="center">Acciones</th>
@@ -40,13 +40,13 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let data of filterTable.data">    
+          <tr *ngFor="let data of ListOfData">    
             <td nzLeft nzAlign="center">
-              <app-modal-new-contract [ListOfClients]="ListOfClients" [ListOfData]="ListOfData" [dataPosition]="data"></app-modal-new-contract>
+              <app-modal-new-contract [ListOfClients]="ListOfClients" [dataPosition]="data"></app-modal-new-contract>
                 <button class="delete" nz-button nzType="primary"  nzShape="circle"><i nz-icon nzType="delete" nzTheme="outline" (click)="DeleteRate(data.id)"></i></button>
               </td>
             <td>{{data.id}}</td>
-            <td>{{data.codigo}}</td>
+            <td>{{data.codigo}}</td>  
             <td>{{data.descripcion}}</td>
             <td>{{ data.cliente }}</td>
             <td>{{ data.fechaCreacion }}</td>  
