--- a/src/app/modules/menu-layout/components/contracts/modal-new-contract/modal-new-contract.component.html
+++ b/src/app/modules/menu-layout/components/contracts/modal-new-contract/modal-new-contract.component.html
@@ -124,7 +124,7 @@
                         <br>
                             <nz-form-item  nzFlex>
                               <nz-form-control>
-                                <nz-input-number formControlName="diasDisponibles" class="inputMedium" [nzMin]="1" [nzMax]="10" [nzStep]="1"></nz-input-number>
+                                <nz-input-number formControlName="diasDisponibles" class="inputMedium" [nzMin]="1"  [nzStep]="1"></nz-input-number>
                               </nz-form-control>
                             </nz-form-item>
                             
@@ -143,7 +143,10 @@
                   <nz-form-item  nzFlex>
                     <nz-form-control>
                       <nz-radio-group >
-                            <label nz-radio formControlName="exportacion" [nzValue]="o.value" *ngFor="let o of options">{{ o.label }}</label>
+                        <nz-select formControlName="exportacion" class="inputLarge">
+                            <nz-option nzLabel="Fecha de contrato" nzValue="true"></nz-option>
+                            <nz-option nzLabel="Fecha especifica" nzValue="false"></nz-option>
+                        </nz-select>  
                       </nz-radio-group>
                     </nz-form-control>
                   </nz-form-item>
