--- a/src/app/modules/menu-layout/components/especial-charges/especial-charges.component.html
+++ b/src/app/modules/menu-layout/components/especial-charges/especial-charges.component.html
@@ -2,7 +2,7 @@
 <div nz-row class="row-1">
 
     <div nz-col nzOffset="8" nzSpan="4" class="row1-col1">
-        <app-modal-new-charge></app-modal-new-charge>
+        <app-modal-new-charge (DataUpdated)="updateTable($event)"></app-modal-new-charge>
     </div>
 
     <div nz-col nzSpan="12" class="row1-col2">
