--- a/src/app/modules/menu-layout/components/input-parameters/input-parameters.component.html
+++ b/src/app/modules/menu-layout/components/input-parameters/input-parameters.component.html
@@ -2,7 +2,7 @@
 <div nz-row class="row-1">
 
     <div nz-col nzOffset="8" nzSpan="4" class="row1-col1">
-      <app-modal-new-parameter  [ListOfCharges]="ListOfCharges" ></app-modal-new-parameter>
+      <app-modal-new-parameter  [ListOfCharges]="ListOfCharges"  (DataUpdated)="updateTable($event)"></app-modal-new-parameter>
     </div>
 
     <div nz-col nzSpan="12" class="row1-col2">
@@ -20,7 +20,7 @@
 </div>
 <div nz-row class="row-2">
   <div nz-col>
-      <nz-table #filterTable [nzData]="listOfData" nzTableLayout="fixed" [nzScroll]="{  x: '1150px', y: '385px' }"  [nzPageSize]="10">
+      <nz-table [nzData]="listOfData" nzTableLayout="fixed" [nzScroll]="{  x: '1150px', y: '385px' }"  [nzPageSize]="10">
         <thead>
           <tr>
           <th nzLeft nzWidth="80px">Acciones</th>
@@ -40,10 +40,10 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let data of filterTable.data">
+          <tr *ngFor="let data of listOfData">
             <td nzLeft>
                 <app-modal-new-parameter [dataPosition]="data" [ListOfCharges]="ListOfCharges"></app-modal-new-parameter>
-                <button class="delete" nz-button nzType="primary"  nzShape="circle"><i nz-icon nzType="delete" nzTheme="outline" (click)="DeleteRate(data.id)"></i></button>
+                <button class="delete" nz-button nzType="primary"  nzShape="circle"><i nz-icon nzType="delete" nzTheme="outline" (click)="DeleteRate(data.idParametro)"></i></button>
               </td>
             <td>{{data.idParametro}}</td>
             <td>{{data.codigo}}</td>
@@ -58,3 +58,4 @@
       
   </div>
 </div>
+
