--- a/src/app/modules/menu-layout/components/home/home.component.html
+++ b/src/app/modules/menu-layout/components/home/home.component.html
@@ -1,2 +1,2 @@
 
-    <img class="Logo" src="../../../../../assets/Images/Logo.jpg" alt="">
+    <img class="Logo" src="../../../../../assets/Images/Logo.png" alt="">
