--- a/src/app/shared/components/menu-layout/menu-layout.component.html
+++ b/src/app/shared/components/menu-layout/menu-layout.component.html
@@ -6,9 +6,9 @@
               [(nzCollapsed)]="isCollapsed"
               [nzTrigger]="null">
       <div class="sidebar-logo">
-        <a href="https://ng.ant.design/" target="_blank">
-          <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
-          <h1>Ant Design Of Angular</h1>
+        <a href="http://falconingenieria.com/" target="_blank">
+          <img src="../../../../../assets/Images/LogoSmall.png" alt="logo">
+          <h1>Falcon Ingenieria</h1>
         </a>
       </div>
       <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
@@ -112,6 +112,21 @@
             </li>
           </ul>
         </li>
+
+        
+        <div nz-menu-item nzMatchRouter>
+          <li>
+              <i nz-icon nzType="pie-chart"></i>
+              <span >Reportes</span>
+          </li>
+        </div>
+
+        <div nz-menu-item nzMatchRouter>
+          <li>
+              <i nz-icon nzType="setting"></i>
+              <span >Configuracion</span>
+          </li>
+        </div>
       </ul>
     </nz-sider>
     <nz-layout>
