--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -1,84 +1,158 @@
 <form nz-form [formGroup]="validateForm" (ngSubmit)="submitForm()">
-    <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="email">E-mail</nz-form-label>
-      <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="The input is not valid E-mail!">
-        <input nz-input formControlName="email" id="email" />
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
+  <div nz-row>
+    <div nz-col nzSpan="12">
+      <nz-form-label  nzRequired nzFor="email">E-mail</nz-form-label>
+
+      <div nz-row>
+        <nz-form-item>
+          <nz-form-control  nzErrorTip="The input is not valid E-mail!">
+            <input nz-input class="inputMedium" formControlName="email" id="email" />
+          </nz-form-control>
+        </nz-form-item>
+
+      </div>
+    </div>
+
+    
+    <div nz-col nzSpan="12">
       <nz-form-label
-        [nzSm]="6"
-        [nzXs]="24"
         nzFor="username"
         nzRequired
         nzTooltipTitle="Nombre con que se te vera en la plataforma"
       >
-        <span>Nombre de usuario</span>
-      </nz-form-label>
-      <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please input your nickname!">
-        <input nz-input id="username" formControlName="username" />
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="password" nzRequired>Password</nz-form-label>
-      <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please input your password!">
-        <input
-          nz-input
-          type="password"
-          id="password"
-          formControlName="password"
-        />
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="checkPassword" nzRequired>Confirm Password</nz-form-label>
-      <nz-form-control [nzSm]="14" [nzXs]="24" [nzErrorTip]="errorTpl">
-        <input nz-input type="password" formControlName="checkPassword" id="checkPassword" />
-        <ng-template #errorTpl let-control>
-          <ng-container *ngIf="control.hasError('required')">Please confirm your password!</ng-container>
-          <ng-container *ngIf="control.hasError('confirm')">
-            Two passwords that you enter is inconsistent!
-          </ng-container>
-        </ng-template>
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="phoneNumber" nzRequired>Phone Number</nz-form-label>
-      <nz-form-control
-        [nzSm]="14"
-        [nzXs]="24"
-        [nzValidateStatus]="validateForm.controls['phoneNumber']"
-        nzErrorTip="Please input your phone number!"
-      >
-        <nz-input-group [nzAddOnBefore]="addOnBeforeTemplate">
-          <ng-template #addOnBeforeTemplate>
-            <nz-select formControlName="phoneNumberPrefix" class="phone-select">
-              <nz-option nzLabel="+504" nzValue="+504"></nz-option>
-              <nz-option nzLabel="+1" nzValue="+1"></nz-option>
-            </nz-select>
-          </ng-template>
-          <input formControlName="phoneNumber" id="'phoneNumber'" nz-input />
-        </nz-input-group>
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="firstName" nzRequired>Nombre</nz-form-label>
-      <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please input firsName!">
-        <input nz-input id="firstName" formControlName="firstName" placeholder="Carlos" />
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="lastName" nzRequired>Apellido</nz-form-label>
-      <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please input lastName!">
-        <input nz-input id="lastName" formControlName="lastName" placeholder="Lopez" />
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="rolId" nzRequired>Rol</nz-form-label>
-      <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please input rolId!">
-        <input nz-input id="rolId" formControlName="rolId" placeholder="Cliente, Administrador" />
-      </nz-form-control>
-    </nz-form-item>
+      <span>Nombre de usuario</span>
+    </nz-form-label>
+    <div nz-row>
+      <nz-form-item>
+        <nz-form-control nzErrorTip="Please input your nickname!">
+          <input nz-input class="inputMedium"  id="username" formControlName="username" />
+        </nz-form-control>
+      </nz-form-item>
+
+    </div>
+      
+    </div>
+
+  </div>
+    
+    <div nz-row>
+      <div nz-col nzSpan="12" >
+          <nz-form-label  nzFor="password" nzRequired>Password</nz-form-label>
+        <div nz-row>
+          <nz-form-item  nzFlex>
+            <nz-form-control  nzErrorTip="Please input your password!">
+              <input
+              class="inputMedium" 
+                nz-input
+                type="password"
+                id="password"
+                formControlName="password"
+              />
+            </nz-form-control>
+            
+          </nz-form-item>
+
+        </div>
+
+      </div>
+        
+      <div nz-col nzSpan="12">
+        <nz-form-label  nzFor="checkPassword" nzRequired>Confirm Password</nz-form-label>
+
+        <div nz-row>
+
+          <nz-form-item>
+            <nz-form-control  [nzErrorTip]="errorTpl">
+              <input nz-input  class="inputMedium"  type="password" formControlName="checkPassword" id="checkPassword" />
+              <ng-template #errorTpl let-control>
+                <ng-container *ngIf="control.hasError('required')">Please confirm your password!</ng-container>
+                <ng-container *ngIf="control.hasError('confirm')">
+                  Two passwords that you enter is inconsistent!
+                </ng-container>
+              </ng-template>
+            </nz-form-control>
+          </nz-form-item>
+
+        </div>
+
+
+    </div>
+
+        
+
+    </div>
+
+    <div nz-row>
+      <div nz-col nzSpan="12"> 
+        <nz-form-label nzFor="phoneNumber" nzRequired>Phone Number</nz-form-label>
+        
+        <div nz-row>
+          <nz-form-item>
+            <nz-form-control
+              [nzValidateStatus]="validateForm.controls['phoneNumber']"
+              nzErrorTip="Please input your phone number!"
+            >
+              <nz-input-group [nzAddOnBefore]="addOnBeforeTemplate">
+                <ng-template #addOnBeforeTemplate>
+                  <nz-select  formControlName="phoneNumberPrefix" class="phone-select">
+                    <nz-option nzLabel="+504" nzValue="+504"></nz-option>
+                    <nz-option nzLabel="+1" nzValue="+1"></nz-option>
+                  </nz-select>
+                </ng-template>
+                <input width="200x" formControlName="phoneNumber" id="'phoneNumber'" nz-input />
+              </nz-input-group>
+            </nz-form-control>
+          </nz-form-item>
+
+        </div>
+
+      </div>
+      
+      <div nz-col nzSpan="12">
+        <nz-form-label  nzFor="rolId" nzRequired>Rol</nz-form-label>
+
+        <div nz-row>
+          <nz-form-item>
+            <nz-form-control  nzErrorTip="Please input rolId!">
+              <input nz-input  class="inputMedium" id="rolId" formControlName="rolId" placeholder="Cliente, Administrador" />
+            </nz-form-control>
+          </nz-form-item>
+
+        </div>
+      </div>
+    </div>
+
+    <div nz-row>
+
+      <div nz-col nzSpan="12">
+        <nz-form-label nzFor="firstName" nzRequired>Nombre</nz-form-label>
+
+        <div row>
+          <nz-form-item>
+            <nz-form-control  nzErrorTip="Please input firsName!">
+              <input nz-input class="inputMedium"  id="firstName" formControlName="firstName" placeholder="Carlos" />
+            </nz-form-control>
+          </nz-form-item>
+
+        </div>
+
+      </div>
+      <div nz-col nzSpan="12">
+        <nz-form-label  nzFor="lastName" nzRequired>Apellido</nz-form-label>
+
+        <div nz-row>
+          <nz-form-item>
+            <nz-form-control  nzErrorTip="Please input lastName!">
+              <input nz-input  class="inputMedium" id="lastName" formControlName="lastName" placeholder="Lopez" />
+            </nz-form-control>
+          </nz-form-item>
+
+        </div>
+
+      </div>
+
+    </div>
+
     <!-- <nz-form-item>
       <nz-form-label
         [nzSm]="6"
@@ -106,19 +180,33 @@
         </div>
       </nz-form-control>
     </nz-form-item> -->
-    <nz-form-item nz-row class="register-area">
-      <nz-form-control [nzSpan]="14" [nzOffset]="6">
-        <label nz-checkbox formControlName="agree">
-          <span>
-            I have read the
-            <a>agreement</a>
-          </span>
-        </label>
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item nz-row class="register-area">
-      <nz-form-control [nzSpan]="14" [nzOffset]="6">
-        <button [disabled]="validateForm.invalid" nz-button nzType="primary">Register</button>
-      </nz-form-control>
-    </nz-form-item>
+    <div nz-row>
+
+      <div nz-col nzSpan="24">
+        <nz-form-item nz-row class="register-area">
+          <nz-form-control [nzSpan]="14" [nzOffset]="6">
+            <label nz-checkbox formControlName="agree">
+              <span>
+                I have read the
+                <a>agreement</a>
+              </span>
+            </label>
+          </nz-form-control>
+        </nz-form-item>
+
+      </div>
+
+    </div>
+
+    <div nz-row>
+      <div nz-col nzSpan="24">
+        <nz-form-item nz-row class="register-area">
+          <nz-form-control [nzSpan]="14" [nzOffset]="6">
+            <button [disabled]="validateForm.invalid" nz-button nzType="primary">Register</button>
+          </nz-form-control>
+        </nz-form-item>
+
+      </div>
+
+    </div>
   </form>
